# api/swagger.js
@@ -6,10 +6,18 @@ const doc = {
     description: "Description",
   },
   host: "localhost:3000",
+  basePath: "/api",
 };
 
 const outputFile = "./swagger-output.json";
-const routes = ["./routes/auth.route.js", "./routes/user.route.js"];
+const routes = [
+  "./routes/auth.route.js",
+  "./routes/user.route.js",
+  "./routes/city.route.js",
+  "./routes/contactForm.route.js",
+  "./routes/teacher.route.js",
+  "./routes/area.route.js",
+];
 
 /* NOTE: If you are using the express Router, you must pass in the 'routes' only the 
 root file where the route starts, such as index.js, app.js, routes.js, etc ... */
